--- a/src/index.scss
+++ b/src/index.scss
@@ -1,71 +1,168 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600;700;800;900&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
-    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #edf6f9;
+  background-color: #ffea00;
+}
+
+* {
+  box-sizing: border-box;
+  font-family: 'Nunito', sans-serif;
 }
 
 .App {
+  padding: 100px;
+  width: 100%;
+  max-width: 900px;
+  margin: 100px auto;
+  background-color: #fff;
+  border-radius: 30px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+}
+
+header {
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  height: 100vh;
-  text-align: center;
+  padding-left: 70px;
+  padding-right: 60px;
 
-  h1 {
-    color: #000;
-    font-size: 7rem;
-    margin: 0;
-    margin-bottom: 20px;
-
-    &.plus {
-      color: #2a9d8f;
-    }
-    &.minus {
-      color: #e63946;
-    }
-  }
-
-  h2 {
-    font-size: 2rem;
-    margin: 0;
-    color: #556581;
-  }
-
-  button {
-    background: transparent;
-    border: 2px solid transparent;
+  h3 {
     text-align: center;
-    font-size: 22px;
-    border-radius: 15px;
-    padding: 10px 25px;
+    font-size: 24px;
+  }
+
+  b {
+    display: block;
+    font-size: 62px;
+    font-weight: 900;
+  }
+}
+
+.game {
+  display: flex;
+  justify-content: space-between;
+  margin: 50px 0;
+
+  &__user {
+    display: flex;
+    align-items: center;
+  }
+
+  &__arrow {
+    width: 80px;
+    margin-left: 30px;
+    transition: all 0.1s ease-in-out;
     cursor: pointer;
-    margin: 0 10px;
-    transition: all 0.05s ease-in-out;
-
-    &.minus {
-      background-color: #e63946;
-      color: #fff;
-      box-shadow: 0 4px 0 darken(#e63946, 10%);
-      border: 1px solid darken(#e63946, 15%);
-    }
-
-    &.plus {
-      background-color: #2a9d8f;
-      color: #fff;
-      box-shadow: 0 4px 0 darken(#2a9d8f, 10%);
-      border: 1px solid darken(#2a9d8f, 15%);
-    }
+    opacity: 0.3;
 
     &:hover {
-      transform: translateY(-2px);
+      transform: translateX(10px);
+      opacity: 1;
     }
+  }
+}
 
-    &:active {
-      transform: translateY(2px);
-      box-shadow: none;
-    }
+.variant {
+  cursor: pointer;
+  transition: all 0.1s ease-in-out;
+  animation: showVariant 0.5s ease-in-out;
+
+  &:hover {
+    transform: scale(1.1);
+  }
+}
+
+.refresh {
+  cursor: pointer;
+}
+
+.waiting {
+  width: 140px;
+  animation: waiting 1s ease-in-out infinite;
+
+  path {
+    fill: rgba(0, 0, 0, 0.3);
+  }
+}
+
+.thinking {
+  width: 140px;
+  animation: thinking 1s ease-in-out infinite;
+}
+
+.userSelect {
+  animation: rightAnimate 0.5s ease-in-out;
+  animation-fill-mode: forwards;
+  pointer-events: none;
+}
+
+.botSelect {
+  animation: leftAnimate 0.5s ease-in-out;
+  animation-fill-mode: forwards;
+  pointer-events: none;
+}
+
+@keyframes waiting {
+  0% {
+    transform: scale(0.9);
+  }
+
+  50% {
+    transform: scale(1);
+  }
+
+  100% {
+    transform: scale(0.9);
+  }
+}
+
+@keyframes thinking {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  50% {
+    transform: rotate(90deg);
+  }
+
+  100% {
+    transform: rotate(180deg);
+  }
+}
+
+@keyframes showVariant {
+  0% {
+    transform: scale(0);
+  }
+
+  50% {
+    transform: scale(1.1);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes rightAnimate {
+  0% {
+    transform: translateX(0);
+  }
+
+  100% {
+    transform: translateX(120px);
+  }
+}
+
+@keyframes leftAnimate {
+  0% {
+    transform: translateX(0);
+  }
+
+  100% {
+    transform: translateX(-120px);
   }
 }
