--- a/src/index.scss
+++ b/src/index.scss
@@ -16,7 +16,12 @@ body {
   justify-content: center;
   height: 100vh;
   text-align: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+
 }
+
+
 
 .open-modal-btn {
   background: #fff;
